[package]
name = "envers"
version = "0.1.0"
authors = ["Vincent Serpoul <vincent@serpoul.com>"]
license = "Apache-2.0"
description = "An env vars Serializer and Deserializer data format for Serde"
repository = "https://github.com/vincentserpoul/envers"
keywords = ["serde"]
categories = ["encoding"]
edition = "2018"
publish = false

[dependencies]
serde = "1.0"

[dev-dependencies]
serde_derive = "1.0"